Bug 614653 - avoid O(n^2) rope node marking (r=gwagner)

--HG--
extra : rebase_source : 03887ef8ee2c6d7856a0ca0fd632746aed1d7ded