js/src/jsstr.h
@@ -630,20 +630,13 @@ class JSRopeNodeIterator {
     static const size_t DONE_RIGHT = 0x2;
 
   public:
-    JSRopeNodeIterator(JSString *str)
-      : mUsedFlags(0)
-    {
-        mStr = str;
-    }
-    
-    JSString *init() {
-        /* If we were constructed with a non-rope string, just return that. */
-        if (!mStr->isRope()) {
-            JSString *oldStr = mStr;
-            mStr = NULL;
-            return oldStr;
-        }
+    JSRopeNodeIterator()
+      : mStr(NULL), mUsedFlags(0)
+    {}
+
+    JSString *init(JSString *str) {
         /* Move to the farthest-left leaf in the rope. */
+        mStr = str;
         while (mStr->isInteriorNode())
             mStr = mStr->interiorNodeParent();
         while (mStr->ropeLeft()->isInteriorNode())
@@ -697,14 +690,9 @@ class JSRopeLeafIterator {
     JSRopeNodeIterator mNodeIterator;
 
   public:
-
-    JSRopeLeafIterator(JSString *topNode) :
-        mNodeIterator(topNode) {
-        JS_ASSERT(topNode->isTopNode());
-    }
-
-    inline JSString *init() {
-        JSString *str = mNodeIterator.init();
+    inline JSString *init(JSString *str) {
+        JS_ASSERT(str->isTopNode());
+        str = mNodeIterator.init(str);
         while (str->isRope()) {
             str = mNodeIterator.next();
             JS_ASSERT(str);
